--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "description": "",
   "dependencies": {
     "@apollo/client": "^3.4.13",
+    "apollo-server-express": "^3.3.0",
     "graphql": "^15.6.0"
   }
 }
